# veryfull

./: .dockerignore  .flake8  .gitignore  .sample.env  Dockerfile  README.md  docker-compose.yml  manage.py  nginx.conf  pyproject.toml  requirements.txt
.github/workflows/: ci-cd.yml
config/: celery.py  settings.py  urls.py
dashboard/: urls.py  views.py
dashboard/templates/dashboard/: base.html  index.html  store_list.html
dashboard/templates/registration/: login.html
network/: admin.py  models.py  permissions.py  serializers.py  tasks.py  urls.py  views.py
network/migrations/: 0001_initial.py
tests/: test_admin.py  test_api.py  test_dashboard.py  test_models.py
