[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "el_network"
version = "0.1.0"
description = "Проект Django для сети продаж электроники"
authors = [{ name = "Carplatinum", email = "mymillions@ya.ru" }]
requires-python = ">=3.9,<4.0"
dependencies = [
    "django>=3.2,<4.0",
    "djangorestframework>=3.10,<4.0",
    "psycopg2-binary",
    "django-filter",
    "django-environ",
    "djangorestframework-simplejwt",
    "django-cors-headers",
    "celery",
    "redis",
    "python-dotenv",
    "django-countries (>=8.1.1,<9.0.0)"
]

[tool.setuptools.packages.find]
where = ["."]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
pytest = "^7.3"
pytest-django = "^4.5"
black = "^23.3"
isort = "^5.12"
flake8 = "^7.3.0"
